# tauri-plugin-windows

./: .gitignore  Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
examples/vanilla/: esbuild.js  package.json  tsconfig.json
examples/vanilla/public/: index.html
examples/vanilla/src/: main.ts
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: error.rs  event.rs  lib.rs  windows.rs
src/windows/: menu.rs  window.rs
webview-dist/: index.d.ts  index.js  windows.d.ts
webview-src/: esbuild.js  index.ts  tsconfig.json  windows.ts
