[package]
name = "app"
version = "0.1.0"
description = "A Tauri Windows Test App"
authors = [ "You" ]
repository = ""
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.2", features = ["dialog-all", "path-all", "window-all"] }
tauri-plugin-windows = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
